# dsa

./: DSA.cabal  form.txt  stack.yaml
app/: Main.hs
doc/: Диплом.odt
src/: CSS.hs  CSSLib.hs  Container.hs  Data.hs  Empty.hs  Gr.hs  GrBuild.hs  Graph.hs  Jac.hs  Lib.hs  Morse.hs  Point.hs  Quar.hs  Shift.hs  Stratification.hs  SymbolicImage.hs
test/: Spec.hs
