name:                DSA
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/DSA#readme
license:             BSD3
license-file:        LICENSE
author:              Дмитрий Александрович Павлюк
maintainer:          al.lastor@bk.ru
copyright:           2016 Дмитрий Александрович Павлюк
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Data
                     , GrBuild
                     , Stratification
                     , Graph
                     , Quar
                     , Point
                     , SymbolicImage
                     , Container
                     , Morse
                     , Shift
                     , Gr
                     , Jac


  build-depends:       base >= 4.7 && < 5
                     , containers
                     , extra
                     , parallel
                     , clock
                     , time
                     , GLUT
                     , OpenGL
                     , vector
                     , matrix
                     , freetype2
                     , lens
                     , gtk
                     , array
  default-language:    Haskell2010

executable DSA-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , DSA
                     , parallel
                     , containers
                     , clock
                     , GLUT
                     , time
                     , extra
                     , OpenGL
                     , vector
                     , matrix
                     , gtk
                     , array
                     , lens
                     , freetype2
  default-language:    Haskell2010

test-suite DSA-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DSA
                     , parallel
                     , containers
                     , clock
                     , time
                     , vector
                     , criterion
                     , do-list
                     , OpenGL
                     , GLUT
                     , array
                     , matrix
                     , glib
                     , gtk
                     , lens
                     , QuickCheck
                     , extra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/DSA
